// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundButton should match the snapshot 1`] = `
<styled.button>
  <Styled(FaPlus) />
  <e
    background={true}
    className="ink"
    duration={1000}
    hasTouch={false}
    opacity={0.25}
    radius={150}
    recenter={true}
  />
</styled.button>
`;

exports[`RoundButton should match the snapshot with icon 1`] = `
<styled.button>
  <p>
    Mock
  </p>
  <e
    background={true}
    className="ink"
    duration={1000}
    hasTouch={false}
    opacity={0.25}
    radius={150}
    recenter={true}
  />
</styled.button>
`;

exports[`RoundButton should match the snapshot with icon 2`] = `
<styled.button>
  <p>
    +
  </p>
  <e
    background={true}
    className="ink"
    duration={1000}
    hasTouch={false}
    opacity={0.25}
    radius={150}
    recenter={true}
  />
</styled.button>
`;
